--- a/index.html
+++ b/index.html
@@ -381,7 +381,7 @@
 
             <img src="../harshita/images/pj5 logo.png" alt="" style="padding: 20px" ; width=20%; font-family: cursive;>
 
-            <a href="./HTML/page2.html"> Click to see P5js Editor Files</a>
+            <a href="../HTML/page2.html"> Click to see P5js Editor Files</a>
             <div id="div11" class="container">
 
         </h2>
